update setup deploy aws

--- a/backend/back-end/orderService/.env
+++ b/backend/back-end/orderService/.env
@@ -1,3 +1,4 @@
 MONGODB_URL=mongodb+srv://admin:10102001@cluster0.ycjok.mongodb.net/PhoneStore
 JWT_ACCESS_KEY=SECRETKEY
 JWT_REFRESH_KEY=JWT_REFRESH_KEY
+FRONTEND_URL=http://demomobilephone.s3-website-ap-southeast-1.amazonaws.com
