--- a/backend/back-end/gateway/.env
+++ b/backend/back-end/gateway/.env
@@ -1,5 +1,5 @@
-USER_SERVICE_URL=http://user:8000
-RATING_SERVICE_URL=http://rating:7000
-ORDER_SERVICE_URL=http://order:5000
-PRODUCT_SERVICE_URL=http://product:4000
-FRONTEND_URL=http://localhost:3000
+USER_SERVICE_URL=localhost:8000
+RATING_SERVICE_URL=localhost:7000
+ORDER_SERVICE_URL=localhost:5000
+PRODUCT_SERVICE_URL=localhost:4000
+FRONTEND_URL=http://demomobilephone.s3-website-ap-southeast-1.amazonaws.com
