--- a/backend/back-end/gateway/Dockerfile
+++ b/backend/back-end/gateway/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:alpine
 WORKDIR /app
-COPY package*.json ./
+COPY package.json ./
 RUN npm install 
 COPY . . 
-EXPOSE 8001
+EXPOSE 8080
 CMD npm start
