--- a/backend/back-end/ratingService/.env
+++ b/backend/back-end/ratingService/.env
@@ -1,4 +1,6 @@
 MONGODB_URL=mongodb+srv://admin:10102001@cluster0.ycjok.mongodb.net/PhoneStore
 JWT_ACCESS_KEY=SECRETKEY
 JWT_REFRESH_KEY=JWT_REFRESH_KEY
+USER_SERVICE_URL=http://localhost:8000
+PRODUCT_SERVICE_URL=http://localhost:4000
 FRONTEND_URL=http://demomobilephone.s3-website-ap-southeast-1.amazonaws.com
