update send email user

--- a/backend/back-end/userService/.env
+++ b/backend/back-end/userService/.env
@@ -4,6 +4,6 @@ JWT_REFRESH_KEY=JWT_REFRESH_KEY
 FRONTEND_URL=http://demomobilephone.s3-website-ap-southeast-1.amazonaws.com
 RESET_PASSWORD_KEY=RESET_PASSWORD_KEY
 EMAIL_ADDRESS=emaildemo333@gmail.com
-EMAIL_PASSWORD=LINH123q
+EMAIL_PASSWORD=fekrwbsytrgoqtcc
 EMAIL_SENDER=
 JWT_RESET_PASSWORD_SECRET=JWT_RESET_PASSWORD_SECRET
