--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-REACT_APP_URL=http://ec2-13-212-191-163.ap-southeast-1.compute.amazonaws.com:8080/
+REACT_APP_API_URL=http://ec2-54-252-174-111.ap-southeast-2.compute.amazonaws.com:8080/
 REACT_APP_ADDRESS_URL=https://provinces.open-api.vn/api/
 REACT_APP_SEARCH_PROVINCES_URL=https://provinces.open-api.vn/api/p/search/ 
 REACT_APP_SEARCH_DISTRISTS_URL=https://provinces.open-api.vn/api/d/search/
