--- a/backend/back-end/gateway/.env
+++ b/backend/back-end/gateway/.env
@@ -2,4 +2,4 @@ USER_SERVICE_URL=localhost:8000
 RATING_SERVICE_URL=localhost:7000
 ORDER_SERVICE_URL=localhost:5000
 PRODUCT_SERVICE_URL=localhost:4000
-FRONTEND_URL=http://demomobilephone.s3-website-ap-southeast-1.amazonaws.com
+FRONTEND_URL=http://deployfrontend134.s3-website-ap-southeast-2.amazonaws.com
