--- a/backend/back-end/userService/.env
+++ b/backend/back-end/userService/.env
@@ -1,7 +1,7 @@
 MONGODB_URL=mongodb+srv://admin:10102001@cluster0.ycjok.mongodb.net/PhoneStore
 JWT_ACCESS_KEY=SECRETKEY
 JWT_REFRESH_KEY=JWT_REFRESH_KEY
-FRONTEND_URL=http://demomobilephone.s3-website-ap-southeast-1.amazonaws.com
+FRONTEND_URL=http://deployfrontend134.s3-website-ap-southeast-2.amazonaws.com
 RESET_PASSWORD_KEY=RESET_PASSWORD_KEY
 EMAIL_ADDRESS=emaildemo333@gmail.com
 EMAIL_PASSWORD=fekrwbsytrgoqtcc
