--- a/backend/back-end/orderService/.env
+++ b/backend/back-end/orderService/.env
@@ -3,4 +3,4 @@ JWT_ACCESS_KEY=SECRETKEY
 JWT_REFRESH_KEY=JWT_REFRESH_KEY
 USER_SERVICE_URL=http://localhost:8000
 PRODUCT_SERVICE_URL=http://localhost:4000
-FRONTEND_URL=http://demomobilephone.s3-website-ap-southeast-1.amazonaws.com
+FRONTEND_URL=http://deployfrontend134.s3-website-ap-southeast-2.amazonaws.com
